fixed z-index issues with tooltips and overlay panels

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -111,7 +111,7 @@ td.bghicol {
   cursor:pointer;
   color:blue;
   text-decoration:underline;
-  z-index: -1;
+  z-index: 0;
 }
 .tooltiptext {
   visibility: hidden;
@@ -122,7 +122,7 @@ td.bghicol {
   border-radius: 6px;
   padding: 5px 0;
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   // default is to place tooltip to the top
   bottom: 150%;
   left: 50%;
